<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_total"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/bill_Input"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter Bill Total"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/billTotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/billTotalLabel"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/billTotalLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/billTotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/billTotalLabel"
        app:layout_constraintVertical_bias="0.064" />

    <RadioGroup
        android:id="@+id/TipbtnGrp"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bill_Input"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/bill_Input"
        app:layout_constraintVertical_bias="0.01999998">

        <RadioButton
            android:id="@+id/radioButton10percent"
            android:layout_width="73dp"
            android:layout_height="49dp"
            android:text="@string/Percent_10"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton15percent"
            android:layout_width="78dp"
            android:layout_height="49dp"
            android:text="@string/Percent_15" />

        <RadioButton
            android:id="@+id/radioButton18percent"
            android:layout_width="72dp"
            android:layout_height="49dp"
            android:text="@string/Percent_18" />

        <RadioButton
            android:id="@+id/radioButtoncustom"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/custom_label" />
    </RadioGroup>

    <TextView
        android:id="@+id/CustomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_new_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tipLabel"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel"
        app:layout_constraintVertical_bias="0.059" />

    <SeekBar
        android:id="@+id/seekBarCustom"
        android:layout_width="271dp"
        android:layout_height="29dp"
        android:max="50"
        android:progress="40"
        app:layout_constraintBottom_toBottomOf="@+id/CustomLabel"
        app:layout_constraintStart_toEndOf="@+id/CustomLabel"
        app:layout_constraintTop_toTopOf="@+id/CustomLabel"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/SeekProgressResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Percent_40"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarCustom"
        app:layout_constraintStart_toEndOf="@+id/seekBarCustom"
        app:layout_constraintTop_toTopOf="@+id/seekBarCustom" />

    <TextView
        android:id="@+id/TipDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CustomLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CustomLabel"
        app:layout_constraintTop_toBottomOf="@+id/CustomLabel"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/TipSelectedResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_label_0_0"
        app:layout_constraintBottom_toBottomOf="@+id/TipDetailsLabel"
        app:layout_constraintEnd_toEndOf="@+id/SeekProgressResult"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toEndOf="@+id/TipDetailsLabel"
        app:layout_constraintTop_toTopOf="@+id/TipDetailsLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TotalObtainedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TipDetailsLabel"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="@+id/TipDetailsLabel"
        app:layout_constraintTop_toBottomOf="@+id/TipDetailsLabel"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/TotalObtainedResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/label_new_0_0"
        app:layout_constraintBottom_toBottomOf="@+id/TotalObtainedLabel"
        app:layout_constraintEnd_toEndOf="@+id/TipSelectedResult"
        app:layout_constraintStart_toEndOf="@+id/TotalObtainedLabel"
        app:layout_constraintTop_toTopOf="@+id/TotalObtainedLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/SplitByLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_by"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TotalObtainedLabel"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@+id/TotalObtainedLabel"
        app:layout_constraintTop_toBottomOf="@+id/TotalObtainedLabel"
        app:layout_constraintVertical_bias="0.082" />

    <RadioGroup
        android:id="@+id/SplitRadioGroup"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/SplitByLabel"
        app:layout_constraintEnd_toEndOf="@+id/TipbtnGrp"
        app:layout_constraintStart_toEndOf="@+id/SplitByLabel"
        app:layout_constraintTop_toTopOf="@+id/SplitByLabel">

        <RadioButton
            android:id="@+id/radioButtonOne"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/one_button"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonTwo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/two_button"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonThree"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/three_button"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_button"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/TotalPerPersonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_person"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SplitByLabel"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="@+id/SplitByLabel"
        app:layout_constraintTop_toBottomOf="@+id/SplitByLabel"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/TotalPerPersonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_0_0"
        app:layout_constraintBottom_toBottomOf="@+id/TotalPerPersonLabel"
        app:layout_constraintEnd_toEndOf="@+id/SplitRadioGroup"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/TotalPerPersonLabel"
        app:layout_constraintTop_toTopOf="@+id/TotalPerPersonLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:text="@string/clear_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SplitRadioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TotalPerPersonLabel"
        app:layout_constraintTop_toBottomOf="@+id/TotalPerPersonResult"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>